--- a/style.css
+++ b/style.css
@@ -107,4 +107,27 @@ footer {
     width: 150px;
     height: 150px;
   }
+}.button {
+  display: block;
+  width: 100%;
+  max-width: 200px;
+  padding: 10px 20px;
+  font-size: 16px;
+  margin: 10px auto;
+  background-color: #4CAF50;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.button:hover {
+  background-color: #3e8e41;
+}
+
+@media only screen and (max-width: 768px) {
+  .button {
+    padding: 15px 30px;
+    font-size: 18px;
+  }
 }
